Updated scss to fix the image overflowing editor-content  causing horizontal scroll

--- a/src/styles/editor/_editor-content.scss
+++ b/src/styles/editor/_editor-content.scss
@@ -248,6 +248,8 @@
   figure {
     position: relative;
     display: inline-block;
+    max-width: 100%;
+    overflow: hidden;
   }
 
   .neeto-editor__image {
